# staticstat

./: LICENSE  README.md  stack.yaml
lambda-partition-log/: Cargo.toml  build.sh
lambda-partition-log/src/: main.rs
