[package]
name = "lambda-partition-log"
version = "0.1.0"
authors = ["iliana destroyer of worlds <iliana@buttslol.net>"]
edition = "2018"
license = "MIT-0"
publish = false

[profile.release]
codegen-units = 1
lto = true
opt-level = 's'
panic = 'abort'

[dependencies]
aws_lambda_events = "0.2.4"
chrono = "0.4.6"
failure = "0.1.5"
flate2 = "1.0.7"
futures = "0.1.27"
lambda_runtime = { git = "https://github.com/nappa85/aws-lambda-rust-runtime.git", rev = "c9f88ea" }
lazy_static = "1.3.0"
rusoto_s3 = "0.38.0"
tokio = "0.1.19"
url = "1.7.2"
